--- a/view/frontend/templates/component/brand_carousel.phtml
+++ b/view/frontend/templates/component/brand_carousel.phtml
@@ -14,7 +14,7 @@ $navIconNextPath = $block->getVar('brand_carousel/navigation/arrows/next/path');
 <div <?php if (!empty($visibility)): ?> class="<?=$visibility?>" <?php endif; ?>>
     <div class="cs-container cs-container--brand-carousel">
         <div class="cs-container__inner">
-            <div class="cs-brand-carousel cs-brand-carousel--slider <?= $block->getVar('brand_carousel/mix'); ?>">
+            <div class="cs-brand-carousel cs-brand-carousel--slider <?= $block->getVar('brand_carousel/additional_css_classes'); ?>">
                 <div class="cs-brand-carousel__carousel">
                     <div class="cs-brand-carousel__wrapper">
                         <ul class="cs-brand-carousel__slides">
@@ -59,7 +59,7 @@ $navIconNextPath = $block->getVar('brand_carousel/navigation/arrows/next/path');
 
                 <?php if($block->getVar('brand_carousel/navigation/show')): ?>
                     <button
-                        class="cs-brand-carousel__nav cs-brand-carousel__nav--prev <?= $block->getVar('brand_carousel/navigation/arrows/prev/mix') ?>"
+                        class="cs-brand-carousel__nav cs-brand-carousel__nav--prev <?= $block->getVar('brand_carousel/navigation/arrows/prev/additional_css_classes') ?>"
                         type="button"
                     >
                         <svg class="cs-brand-carousel__nav-icon">
@@ -70,7 +70,7 @@ $navIconNextPath = $block->getVar('brand_carousel/navigation/arrows/next/path');
                         </svg>
                     </button>
                     <button
-                        class="cs-brand-carousel__nav cs-brand-carousel__nav--next <?= $block->getVar('brand_carousel/navigation/arrows/next/mix') ?>"
+                        class="cs-brand-carousel__nav cs-brand-carousel__nav--next <?= $block->getVar('brand_carousel/navigation/arrows/next/additional_css_classes') ?>"
                         type="button">
                         <svg class="cs-brand-carousel__nav-icon">
                             <use
@@ -82,7 +82,7 @@ $navIconNextPath = $block->getVar('brand_carousel/navigation/arrows/next/path');
                 <?php endif; ?>
 
                 <?php if($block->getVar('brand_carousel/pagination/show')): ?>
-                    <ul class="cs-brand-carousel__pagination <?= $block->getVar('brand_carousel/pagination/mix') ?>"></ul>
+                    <ul class="cs-brand-carousel__pagination <?= $block->getVar('brand_carousel/pagination/additional_css_classes') ?>"></ul>
                 <?php endif; ?>
             </div>
         </div>
