--- a/view/frontend/templates/component/daily_deal_teaser.phtml
+++ b/view/frontend/templates/component/daily_deal_teaser.phtml
@@ -6,9 +6,6 @@ $visibility = $block->getVisibilityClass();
 
 $product = $viewModel->getProduct();
 
-$showIfExpired = false;
-$expiredContent = '';
-
 $labels = [
     'day' =>  __('Day'),
     'days' =>  __('Days'),
@@ -19,120 +16,153 @@ $labels = [
     'second' =>  __('Sec'),
     'seconds' =>  __('Sec')
 ];
+
+$isLazyLoaded = $block->getVar('daily_deal_teaser/lazyload_image');
+
 ?>
 
-<div <?php if (!empty($visibility)): ?> class="<?=$visibility?>" <?php endif; ?>">
-    <div class="cs-container cs-container--daily-deal-teaser">
-        <div class="cs-container__inner">
-            <section class="cs-daily-deal-teaser">
-                <a href="<?= $product['url'] ?>" class="cs-daily-deal-teaser__image-wrapper">
-                    <figure class="cs-daily-deal-teaser__figure" role="group">
-                        <img
-                            class="cs-daily-deal-teaser__image | lazyload"
-                            src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs="
-                            data-src="<?=$product['image']['src'] ?>"
-                            alt="<?= $product['name'] ?>"
-                            <?php if (isset($product['image']['srcset'])): ?>data-srcset="<?=$product['image']['srcset']?>"<?php endif; ?>
-                            <?php if (isset($product['image']['sizes'])): ?>sizes="<?=$product['image']['sizes']?>"<?php endif; ?>
-                            <?php if (isset($product['image']['width'])): ?>width="<?=$product['image']['width']?>"<?php endif; ?>
-                            <?php if (isset($product['image']['height'])): ?>height="<?=$product['image']['height']?>"<?php endif; ?>
-                        >
-                        <noscript>
+<?php if (!empty($product)): ?>
+
+    <div <?php if (!empty($visibility)): ?> class="<?=$visibility?>" <?php endif; ?>">
+        <div class="cs-container cs-container--daily-deal-teaser">
+            <div class="cs-container__inner">
+                <section class="cs-daily-deal-teaser <?= $block->getVar('daily_deal_teaser/additional_css_classes'); ?>">
+                    <a href="<?= $product['url'] ?>" class="cs-daily-deal-teaser__image-wrapper">
+                        <figure class="cs-daily-deal-teaser__figure" role="group">
                             <img
-                                class="cs-daily-deal-teaser__image"
-                                src="<?= $product['image']['src'] ?>"
+                                class="cs-daily-deal-teaser__image | <?php if($isLazyLoaded){ echo 'lazyload';} ?>"
+                                <?php if($isLazyLoaded): ?>
+                                src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs="
+                                data-src="<?=$product['image']['src'] ?>"
+                                <?php else: ?>
+                                src="<?=$product['image']['src'] ?>"
+                                <?php endif; ?>
                                 alt="<?= $product['name'] ?>"
                                 <?php if (isset($product['image']['srcset'])): ?>data-srcset="<?=$product['image']['srcset']?>"<?php endif; ?>
                                 <?php if (isset($product['image']['sizes'])): ?>sizes="<?=$product['image']['sizes']?>"<?php endif; ?>
                                 <?php if (isset($product['image']['width'])): ?>width="<?=$product['image']['width']?>"<?php endif; ?>
                                 <?php if (isset($product['image']['height'])): ?>height="<?=$product['image']['height']?>"<?php endif; ?>
                             >
-                        </noscript>
+                            <noscript>
+                                <img
+                                    class="cs-daily-deal-teaser__image"
+                                    src="<?= $product['image']['src'] ?>"
+                                    alt="<?= $product['name'] ?>"
+                                    <?php if (isset($product['image']['srcset'])): ?>data-srcset="<?=$product['image']['srcset']?>"<?php endif; ?>
+                                    <?php if (isset($product['image']['sizes'])): ?>sizes="<?=$product['image']['sizes']?>"<?php endif; ?>
+                                    <?php if (isset($product['image']['width'])): ?>width="<?=$product['image']['width']?>"<?php endif; ?>
+                                    <?php if (isset($product['image']['height'])): ?>height="<?=$product['image']['height']?>"<?php endif; ?>
+                                >
+                            </noscript>
 
-                        <figcaption class="cs-daily-deal-teaser__slogan"><?=__('Short time offer')?></figcaption>
+                            <?php if($block->getVar('daily_deal_teaser/slogan/show')): ?>
+                            <figcaption class="cs-daily-deal-teaser__slogan"><?=__('Short time offer')?></figcaption>
 
-                        <figure class="cs-daily-deal-teaser__slogan-icon-wrapper">
-                            <svg class="cs-daily-deal-teaser__slogan-icon"><use xlink:href="#clock"></use></svg>
+                            <figure class="cs-daily-deal-teaser__slogan-icon-wrapper">
+                                <svg class="cs-daily-deal-teaser__slogan-icon">
+                                    <use xlink:href="<?php echo $block->getVar('daily_deal_teaser/slogan/icon_path'); ?>"></use>
+                                </svg>
+                            </figure>
+                            <?php endif; ?>
                         </figure>
-                    </figure>
-                </a>
+                    </a>
 
-                <div class="cs-daily-deal-teaser__details">
-                    <?php if (isset($product['brandName'])): ?>
-                    <p class="cs-daily-deal-teaser__product-brand"><?=$product['brandName']?></p>
-                    <?php endif; ?>
+                    <div class="cs-daily-deal-teaser__details">
+                        <?php if (isset($product['brandName']) && $block->getVar('daily_deal_teaser/show_brand')): ?>
+                        <p class="cs-daily-deal-teaser__product-brand"><?=$product['brandName']?></p>
+                        <?php endif; ?>
 
-                    <p class="cs-daily-deal-teaser__product-name">
-                        <a href="<?=$product['url']?>" class="cs-daily-deal-teaser__product-link"><?=$product['name']?></a>
-                    </p>
+                        <p class="cs-daily-deal-teaser__product-name">
+                            <a href="<?=$product['url']?>" class="cs-daily-deal-teaser__product-link"><?=$product['name']?></a>
+                        </p>
 
-                    <div class="cs-daily-deal-teaser__product-rating">
-                        <?= $this->getLayout()
-                            ->createBlock(\Magento\Framework\View\Element\Template::class)
-                            ->setMaxStars(5)
-                            ->setActiveStars($product['rating']['data']['activeStars'])
-                            ->setReviewsCount($product['rating']['data']['text'])
-                            ->setTemplate('Magento_Review::rating-stars.phtml')
-                            ->toHtml();
-                        ?>
-                    </div>
-
-                    <?php if(isset($product['swatches'])): ?>
-                    <div class="cs-daily-deal-teaser__product-swatches"><?=$product['swatches']?></div>
-                    <?php endif; ?>
-
-                    <div class="cs-daily-deal-teaser__dd-details">
-                        <div class="cs-daily-deal-teaser__dd-column">
-                            <p class="cs-daily-deal-teaser__dd-headline cs-daily-deal-teaser__dd-headline--countdown"><?=__('Time left')?></p>
-
-                            <div class="cs-dailydeal cs-dailydeal--teaser">
-                                <div class="cs-dailydeal__countdown" data-dailydeal-end="<?=$product['dailyDealOffer']['to']?>"></div>
-                                <input type="hidden" name="cs-dailydeal__countdown-labels" class="cs-dailydeal__countdown-labels" value='<?=json_encode($labels)?>'>
-                            </div>
+                        <?php if (isset($product['rating']['data']['activeStars']) && $block->getVar('daily_deal_teaser/show_rating')): ?>
+                        <div class="cs-daily-deal-teaser__product-rating">
+                            <?= $this->getLayout()
+                                ->createBlock(\Magento\Framework\View\Element\Template::class)
+                                ->setMaxStars(5)
+                                ->setActiveStars($product['rating']['data']['activeStars'])
+                                ->setReviewsCount($product['rating']['data']['text'])
+                                ->setTemplate('Magento_Review::rating-stars.phtml')
+                                ->toHtml();
+                            ?>
                         </div>
+                        <?php endif; ?>
 
-                        <div class="cs-daily-deal-teaser__dd-column">
-                            <p class="cs-daily-deal-teaser__dd-headline cs-daily-deal-teaser__dd-headline--limit"><?=__('Available items')?></p>
+                        <?php if(isset($product['swatches'])): ?>
+                        <div class="cs-daily-deal-teaser__product-swatches"><?=$product['swatches']?></div>
+                        <?php endif; ?>
 
-                            <div class="cs-daily-deal-teaser__progress-bar">
-                                <div class="cs-cart-bonus__progress-wrapper cs-daily-deal-teaser__progress-bar-content">
-                                    <?php $percentage = ( ((int)$product['dailyDealOffer']['items'] / (int)$product['dailyDealOffer']['initialAmount']) * 100) / 100 ?>
-                                    <div class="cs-cart-bonus__progress-done cs-daily-deal-teaser__progress" style="transform: scaleX(<?=$percentage?>)"></div>
-                                    <div class="cs-cart-bonus__progress-possible cs-daily-deal-teaser__progress-bg"></div>
+                        <div class="cs-daily-deal-teaser__dd-details">
+                            <div class="cs-daily-deal-teaser__dd-column">
+                                <p class="cs-daily-deal-teaser__dd-headline cs-daily-deal-teaser__dd-headline--countdown"><?=__('Time left')?></p>
+
+                                <div class="cs-dailydeal cs-dailydeal--teaser">
+                                    <div class="cs-dailydeal__countdown" data-dailydeal-end="<?=$product['dailyDealOffer']['to']?>"></div>
+                                    <input type="hidden" name="cs-dailydeal__countdown-labels" class="cs-dailydeal__countdown-labels" value='<?=json_encode($labels)?>'>
                                 </div>
+                            </div>
 
-                                <span class="cs-daily-deal-teaser__available">
-                                    <?=$product['dailyDealOffer']['items']?> / <?=$product['dailyDealOffer']['initialAmount']?>
+                            <?php if($block->getVar('daily_deal_teaser/show_available_amount_section') && isset($product['dailyDealOffer']['initialAmount']) && ($product['dailyDealOffer']['initialAmount'] > 0)): ?>
+                            <div class="cs-daily-deal-teaser__dd-column">
+                                <p class="cs-daily-deal-teaser__dd-headline cs-daily-deal-teaser__dd-headline--limit"><?=__('Available items')?></p>
+
+                                <div class="cs-daily-deal-teaser__progress-bar">
+                                    <div class="cs-cart-bonus__progress-wrapper cs-daily-deal-teaser__progress-bar-content">
+                                        <?php $percentage = ( ((int)$product['dailyDealOffer']['items'] / (int)$product['dailyDealOffer']['initialAmount']) * 100) / 100 ?>
+                                        <div class="cs-cart-bonus__progress-done cs-daily-deal-teaser__progress" style="transform: scaleX(<?=$percentage?>)"></div>
+                                        <div class="cs-cart-bonus__progress-possible cs-daily-deal-teaser__progress-bg"></div>
+                                    </div>
+
+                                    <span class="cs-daily-deal-teaser__available">
+                                        <?=$product['dailyDealOffer']['items']?> / <?=$product['dailyDealOffer']['initialAmount']?>
+                                    </span>
+                                </div>
+                            </div>
+                            <?php endif; ?>
+                        </div>
+                    </div>
+
+                    <aside class="cs-daily-deal-teaser__actions">
+                        <div class="cs-daily-deal-teaser__price-details">
+                            <?php if($block->getVar('daily_deal_teaser/discount_badge/show') && $product['dailyDealOffer']['discountPercentage']): ?>
+                            <div class="cs-daily-deal-teaser__discount">
+                                <span class="cs-daily-deal-teaser__badge-wrapper cs-dailydeal__badge cs-dailydeal__badge--dd-discount">
+                                    <span class="cs-badge cs-badge--cut cs-badge--attention cs-daily-deal-teaser__badge">
+                                        <span class="cs-badge__span cs-daily-deal-teaser__badge-text">
+
+                                        <?php if($block->getVar('daily_deal_teaser/discount_badge/show_sale_label')): ?>
+                                            <?=__('Sale')?>
+                                        <?php endif; ?>
+
+                                        <?php if($block->getVar('daily_deal_teaser/discount_badge/show_percentage')): ?>
+                                            <?= $block->getVar('daily_deal_teaser/discount_badge/prefix'); ?><?=$product['dailyDealOffer']['discountPercentage']?><?= $block->getVar('daily_deal_teaser/discount_badge/suffix'); ?>
+                                        <?php endif; ?>
+
+                                        </span>
+                                    </span>
                                 </span>
                             </div>
+                            <?php endif; ?>
+
+                            <div class="cs-daily-deal-teaser__price"><?=$product['price']?></div>
                         </div>
-                    </div>
+
+                        <?php if($block->getVar('daily_deal_teaser/addtocart_button/show')): ?>
+                        <div class="cs-daily-deal-teaser__addtocart cs-addtocart">
+                            <?=$product['addToCartButtonHtml']?>
+                        </div>
+                        <?php endif; ?>
+                    </aside>
+                </section>
+
+                <?php if($block->getVar('daily_deal_teaser/expired_notice/show')): ?>
+                <div class="cs-daily-deal-teaser cs-daily-deal-teaser--expired">
+                    <?= $block->getVar('daily_deal_teaser/expired_notice/content'); ?>
                 </div>
-
-                <aside class="cs-daily-deal-teaser__actions">
-                    <div class="cs-daily-deal-teaser__price-details">
-                        <div class="cs-daily-deal-teaser__discount">
-                            <span class="cs-daily-deal-teaser__badge-wrapper cs-dailydeal__badge cs-dailydeal__badge--dd-discount">
-                                <span class="cs-badge cs-badge--cut cs-badge--attention cs-daily-deal-teaser__badge">
-                                    <span class="cs-badge__span cs-daily-deal-teaser__badge-text">-<?=$product['dailyDealOffer']['discountPercentage']?>%</span>
-                                </span>
-                            </span>
-                        </div>
-
-                        <div class="cs-daily-deal-teaser__price"><?=$product['price']?></div>
-                    </div>
-
-                    <div class="cs-daily-deal-teaser__addtocart cs-addtocart">
-                        <?=$product['addToCartButtonHtml']?>
-                    </div>
-                </aside>
-            </section>
-
-            <?php if($showIfExpired): ?>
-            <div class="cs-daily-deal-teaser cs-daily-deal-teaser--expired">
-                <?php echo $expiredContent; ?>
+                <?php endif; ?>
             </div>
-            <?php endif; ?>
         </div>
     </div>
-</div>
+
+<?php endif; ?>
