--- a/view/frontend/templates/component/product_finder.phtml
+++ b/view/frontend/templates/component/product_finder.phtml
@@ -12,7 +12,7 @@ $i = 0;
 <div <?php if (!empty($visibility)): ?> class="<?=$visibility?>" <?php endif; ?>>
     <div class="cs-container cs-container--product-finder">
         <div class="cs-container__inner">
-            <div class="cs-product-finder <?=$block->getVar('product_finder/mix');?>">
+            <div class="cs-product-finder <?=$block->getVar('product_finder/additional_css_classes');?>">
                 <?php foreach($steps as $step): ?>
                 <?php
 
@@ -64,11 +64,21 @@ $i = 0;
                         </div>
                         <?php endforeach; ?>
                     </div>
-                    <button class="cs-product-finder__back-button"><?=__("Go to previous step")?></button>
+                    <button class="cs-product-finder__back-button">
+                        <span class="cs-product-finder__back-button-span"><?=__("Go to previous step")?></span>
+                        <svg class="cs-product-finder__back-button-icon">
+                            <use xlink:href="<?= $block->getVar('product_finder/button_icon_path') ?>"></use>
+                        </svg>
+                    </button>
                 </article>
                 <?php $i++; ?>
                 <?php endforeach; ?>
-                <button class="cs-product-finder__back-button"><?=__("Go to previous step")?></button>
+                <button class="cs-product-finder__back-button">
+                    <span class="cs-product-finder__back-button-span"><?=__("Go to previous step")?></span>
+                    <svg class="cs-product-finder__back-button-icon">
+                        <use xlink:href="<?= $block->getVar('product_finder/button_icon_path') ?>"></use>
+                    </svg>
+                </button>
                 <form class="cs-product-finder__form" method="post" action="<?=$viewModel->getRedirectEndpointUrl()?>"></form>
             </div>
         </div>
