--- a/view/frontend/templates/component/product_grid.phtml
+++ b/view/frontend/templates/component/product_grid.phtml
@@ -7,87 +7,83 @@ $hero = $viewModel->getHero();
 $heroImage = $hero->getImage();
 
 $linkTag = !empty($hero->getHref()) ? 'a' : 'div';
-
-$isLazyLoaded = $block->getVar('product_grid_carousel/lazyload_heros_images');
+$isLazyLoaded = $block->getVar('product_grid/lazyload_heros_images');
 ?>
 
 <div <?php if (!empty($visibility)): ?> class="<?=$visibility?>" <?php endif; ?>>
     <div class="cs-container cs-container--products-grid">
         <div class="cs-container__inner">
-            <div class="cs-products-grid <?= $viewModel->hasHero() ? 'cs-products-grid--with-hero' : '' ?>"
+            <div class="cs-products-grid <?= $viewModel->hasHero() ? 'cs-products-grid--with-hero' : '' ?> <?= $block->getVar('product_grid/additional_css_classes'); ?>"
                  data-rows-mobile="<?= $viewModel->getRowsMobile() ?>"
                  data-rows-tablet="<?= $viewModel->getRowsTablet() ?>"
                  data-rows-desktop="<?= $viewModel->getRowsDesktop() ?>"
-                 <?= $block->getVar('product_grid/additional_css_classes'); ?>
             >
                 <?php
-                $columnsConfiguration = $block->getVar('product_grid/columns_configuration');
                 $teasersConfiguration = $block->getVar('product_grid/teasers_configuration');
                 $teasersConfiguration['gridPosition']['x'] = $viewModel->getHero()->getPosition();
                 ?>
-                <div class="cs-grid-layout"
-                     data-columns-configuration='<?= json_encode($columnsConfiguration) ?>'
-                     data-teasers-configuration='[<?= json_encode($teasersConfiguration) ?>]'>
-                    <ul class="cs-grid-layout__grid">
+                <div class="cs-grid-layout cs-products-grid__grid-layout">
+                    <ul class="cs-grid-layout__grid cs-products-grid__grid">
                         <?php if ($viewModel->hasHero()): ?>
-                        <li class="cs-grid-layout__brick cs-grid-layout__brick--x<?= $block->getVar('product_grid/teasers_configuration/size/x'); ?> cs-grid-layout__brick--y<?= $block->getVar('product_grid/teasers_configuration/size/y'); ?> cs-grid-layout__brick--teaser | cs-products-grid__hero cs-products-grid__hero--scheme-<?= $hero['colorScheme'] ?>"
+                        <li class="cs-grid-layout__brick<?= $teasersConfiguration['size']['x'] == '2' ? ' cs-grid-layout__brick--x2' : '' ?><?= $teasersConfiguration['size']['y'] == '2' ? ' cs-grid-layout__brick--y2' : '' ?> cs-grid-layout__brick--teaser cs-products-grid__hero-brick"
                             data-teaser-id="1">
-                            <<?= $linkTag ?> <?php if ($hero->getHref()): ?> href="<?= $hero->getHref() ?>" <?php endif; ?>
-                            class="cs-products-grid__hero-link">
+                            <div class="cs-grid-layout__teaser cs-grid-layout__teaser--scheme-<?= $hero['colorScheme'] ?> cs-products-grid__hero cs-products-grid__hero--scheme-<?= $hero['colorScheme'] ?>">
+                                <<?= $linkTag ?> <?php if ($hero->getHref()): ?> href="<?= $hero->getHref() ?>" <?php endif; ?>
+                                class="cs-grid-layout__teaser-content-wrapper cs-products-grid__hero-link">
 
-                            <?php if ($heroImage->getSrc()): ?>
-                                <figure class="cs-products-grid__hero-figure">
-                                    <img
-                                        class="cs-products-grid__hero-image | <?php if($isLazyLoaded){ echo 'lazyload';} ?>"
-                                        <?php if($isLazyLoaded): ?>
-                                            src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs="
-                                            data-src="<?= $heroImage->getSrc() ?>"
-                                        <?php else: ?>
-                                            src="<?= $heroImage->getSrc() ?>"
-                                        <?php endif; ?>
-                                        <?php if ($heroImage->getSrcSet()): ?>data-srcset="<?= $heroImage->getSrcSet() ?>"<?php endif; ?>
-                                        alt="<?= $heroImage->getAlt() ?>"
-                                    >
-                                    <noscript>
+                                <?php if ($heroImage->getSrc()): ?>
+                                    <figure class="cs-grid-layout__teaser-figure cs-products-grid__hero-figure">
                                         <img
-                                            class="cs-products-grid__hero-image"
-                                            src="<?= $heroImage->getSrc() ?>"
-                                            <?php if ($heroImage->getSrcSet()): ?>srcset="<?= $heroImage->getSrcSet() ?>"<?php endif; ?>
+                                            class="cs-grid-layout__teaser-image cs-products-grid__hero-image <?php if($isLazyLoaded){ echo 'lazyload';} ?>"
+                                            <?php if($isLazyLoaded): ?>
+                                                src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs="
+                                                data-src="<?= $heroImage->getSrc() ?>"
+                                            <?php else: ?>
+                                                src="<?= $heroImage->getSrc() ?>"
+                                            <?php endif; ?>
+                                            <?php if ($heroImage->getSrcSet()): ?>data-srcset="<?= $heroImage->getSrcSet() ?>"<?php endif; ?>
                                             alt="<?= $heroImage->getAlt() ?>"
                                         >
-                                    </noscript>
-                                </figure>
-                            <?php endif; ?>
+                                        <noscript>
+                                            <img
+                                                class="cs-grid-layout__teaser-image cs-products-grid__hero-image"
+                                                src="<?= $heroImage->getSrc() ?>"
+                                                <?php if ($heroImage->getSrcSet()): ?>srcset="<?= $heroImage->getSrcSet() ?>"<?php endif; ?>
+                                                alt="<?= $heroImage->getAlt() ?>"
+                                            >
+                                        </noscript>
+                                    </figure>
+                                <?php endif; ?>
 
-                            <div class="cs-products-grid__hero-content-wrapper cs-products-grid__hero-content-wrapper--variant-<?= $hero->getDisplayVariant() ?>">
-                                <div class="cs-products-grid__hero-content">
-                                    <?php if ($hero->getHeadline()): ?>
-                                        <h2 class="cs-products-grid__hero-headline"><?= $hero->getHeadline() ?></h2>
-                                    <?php endif ?>
+                                <div class="cs-grid-layout__teaser-content cs-grid-layout__teaser-content--variant-<?= $hero->getDisplayVariant() ?> cs-products-grid__hero-content-wrapper cs-products-grid__hero-content-wrapper--variant-<?= $hero->getDisplayVariant() ?>">
+                                    <div class="cs-grid-layout__teaser-content-inner cs-products-grid__hero-content">
+                                        <?php if ($hero->getHeadline()): ?>
+                                            <h2 class="cs-grid-layout__teaser-headline cs-products-grid__hero-headline"><?= $hero->getHeadline() ?></h2>
+                                        <?php endif ?>
 
-                                    <?php if ($hero->getSubheadline()): ?>
-                                        <p class="cs-products-grid__hero-subheadline"><?= $hero->getSubheadline() ?></p>
-                                    <?php endif ?>
+                                        <?php if ($hero->getSubheadline()): ?>
+                                            <p class="cs-grid-layout__teaser-subheadline cs-products-grid__hero-subheadline"><?= $hero->getSubheadline() ?></p>
+                                        <?php endif ?>
 
-                                    <?php if ($hero->getParagraph()): ?>
-                                        <p class="cs-products-grid__hero-text"><?= $hero->getParagraph() ?></p>
-                                    <?php endif ?>
+                                        <?php if ($hero->getParagraph()): ?>
+                                            <p class="cs-grid-layout__teaser-text cs-products-grid__hero-text"><?= $hero->getParagraph() ?></p>
+                                        <?php endif ?>
 
-                                    <?php if ($hero->getHref() and $hero->getButtonLabel()): ?>
-                                        <div class="cs-products-grid__hero-cta">
-                                            <span role="button"
-                                                  class="cs-button cs-button--type_long cs-button--look_default | cs-products-grid__button">
-                                                  <span class="cs-button__span"><?= $hero->getButtonLabel() ?></span>
-                                                      <svg class="cs-button__icon">
-                                                          <use xlink:href="<?php echo $block->getVar('product_grid/cta_button_icon_path'); ?>"></use>
-                                                      </svg>
-                                            </span>
-                                        </div>
-                                    <?php endif; ?>
+                                        <?php if ($hero->getHref() and $hero->getButtonLabel()): ?>
+                                            <div class="cs-products-grid__hero-cta">
+                                                <span role="button"
+                                                      class="cs-button cs-button--type_long cs-button--look_default | cs-products-grid__button">
+                                                      <span class="cs-button__span"><?= $hero->getButtonLabel() ?></span>
+                                                          <svg class="cs-button__icon">
+                                                              <use xlink:href="<?php echo $block->getVar('product_grid/cta_button_icon_path'); ?>"></use>
+                                                          </svg>
+                                                </span>
+                                            </div>
+                                        <?php endif; ?>
+                                    </div>
                                 </div>
-                            </div>
-
-                            </<?= $linkTag ?>>
+                                </<?= $linkTag ?>>
+                                </div>
                             </li>
                         <?php endif; ?>
                         <?php $iterator = 1 ?>
@@ -97,6 +93,7 @@ $isLazyLoaded = $block->getVar('product_grid_carousel/lazyload_heros_images');
                             </li>
                         <?php endforeach ?>
                     </ul>
+                    <input type="hidden" class="image-teasers-data" value='[<?= json_encode($teasersConfiguration) ?>]'>
                 </div>
             </div>
         </div>
