--- a/view/frontend/templates/component/product_finder.phtml
+++ b/view/frontend/templates/component/product_finder.phtml
@@ -7,13 +7,15 @@ $viewModel = $block->getViewModel();
 $visibility = $block->getVisibilityClass();
 $steps = $viewModel->getSteps();
 $i = 0;
+
+$componentClasses = empty($block->getVar('product_finder/additional_css_classes')) ? '' :  ' ' . $block->getVar('product_finder/additional_css_classes');
 ?>
 
-<div <?php if (!empty($visibility)): ?> class="<?=$visibility?>" <?php endif; ?>>
+<div <?= empty($visibility) ? '' : 'class="' . $visibility . '"'; ?>>
     <div class="cs-container cs-container--product-finder">
         <div class="cs-container__inner">
-            <div class="cs-product-finder <?=$block->getVar('product_finder/additional_css_classes');?>">
-                <?php foreach($steps as $step): ?>
+            <div class="cs-product-finder<?= $componentClasses ?>">
+            <?php foreach($steps as $step): ?>
                 <?php
 
                     $stepOptionsPerRow = array_merge($viewModel->getData('optionsPerRow'), isset($step['optionsPerRow']) ? $step['optionsPerRow'] : []);
@@ -21,7 +23,8 @@ $i = 0;
 
                     $stepClasses[] = "cs-product-finder__step--options-mobile_".$stepOptionsPerRow['mobile'];
                     $stepClasses[] = "cs-product-finder__step--options-tablet_".$stepOptionsPerRow['mobile'];
-                    $stepClasses[] = " cs-product-finder__step--options-desktop_".$stepOptionsPerRow['desktop'];                                   $stepClasses[] = $step['additional_css_class'];
+                    $stepClasses[] = " cs-product-finder__step--options-desktop_".$stepOptionsPerRow['desktop'];
+                    $stepClasses[] = $step['additional_css_class'];
 
                     if($i == 0) {
                         $stepClasses[] = 'cs-product-finder__step--current';
@@ -35,7 +38,7 @@ $i = 0;
                     <?php if (!empty($step['title']) || !empty($step['description'])): ?>
                         <header class="cs-product-finder__step-header">
                             <?php if (!empty($step['title'])): ?>
-                                <div class="cs-product-finder__step-title"><?=$step['title']?></div>
+                                <h2><?=$step['title']?></h2>
                             <?php endif; ?>
                             <?php if (!empty($step['description'])): ?>
                                 <p class="cs-product-finder__step-description"><?=$step['description']?></p>
@@ -66,18 +69,26 @@ $i = 0;
                     </div>
                     <button class="cs-product-finder__back-button">
                         <span class="cs-product-finder__back-button-span"><?=__("Go to previous step")?></span>
-                        <svg class="cs-product-finder__back-button-icon">
-                            <use xlink:href="<?= $block->getVar('product_finder/button_icon_path') ?>"></use>
-                        </svg>
+                        <?= $this   ->getLayout()
+                                        ->createBlock('MageSuite\ThemeHelpers\Block\Icon')
+                                        ->setIconUrl($block->getVar('product_finder/button_icon_path'))
+                                        ->setCssClass('cs-product-finder__back-button-icon')
+                                        ->setInlined(true)
+                                        ->toHtml(); 
+                        ?>
                     </button>
                 </article>
                 <?php $i++; ?>
                 <?php endforeach; ?>
                 <button class="cs-product-finder__back-button">
                     <span class="cs-product-finder__back-button-span"><?=__("Go to previous step")?></span>
-                    <svg class="cs-product-finder__back-button-icon">
-                        <use xlink:href="<?= $block->getVar('product_finder/button_icon_path') ?>"></use>
-                    </svg>
+                    <?= $this   ->getLayout()
+                                ->createBlock('MageSuite\ThemeHelpers\Block\Icon')
+                                ->setIconUrl($block->getVar('product_finder/button_icon_path'))
+                                ->setCssClass('cs-product-finder__back-button-icon')
+                                ->setInlined(true)
+                                ->toHtml(); 
+                    ?>
                 </button>
                 <form class="cs-product-finder__form" method="post" action="<?=$viewModel->getRedirectEndpointUrl()?>"></form>
             </div>
