Add proper way of adding icons into phtml

--- a/view/frontend/templates/component/brand_carousel.phtml
+++ b/view/frontend/templates/component/brand_carousel.phtml
@@ -4,14 +4,13 @@ $componentConfiguration = $block->getData();
 
 /** @var \MageSuite\ContentConstructorFrontend\Model\Component\BrandCarousel $viewModel */
 $viewModel = $block->getViewModel();
+$visibility = $block->getVisibilityClass();
 
 $brands = $viewModel->getBrands();
 $isLazyLoaded = $block->getVar('brand_carousel/lazyload_brand_images');
-$navIconPrevPath = $block->getVar('brand_carousel/navigation/arrows/prev/path');
-$navIconNextPath = $block->getVar('brand_carousel/navigation/arrows/next/path');
 ?>
 
-<div <?php if (!empty($visibility)): ?> class="<?=$visibility?>" <?php endif; ?>>
+<div <?= empty($visibility) ? '' : 'class="' . $visibility . '"'; ?>>
     <div class="cs-container cs-container--brand-carousel">
         <div class="cs-container__inner">
             <div class="cs-brand-carousel cs-brand-carousel--slider <?= $block->getVar('brand_carousel/additional_css_classes'); ?>">
@@ -62,22 +61,24 @@ $navIconNextPath = $block->getVar('brand_carousel/navigation/arrows/next/path');
                         class="cs-brand-carousel__nav cs-brand-carousel__nav--prev <?= $block->getVar('brand_carousel/navigation/arrows/prev/additional_css_classes') ?>"
                         type="button"
                     >
-                        <svg class="cs-brand-carousel__nav-icon">
-                            <use
-                                xlink:href="<?= $navIconPrevPath ?>"
-                                href="<?= $navIconPrevPath ?>">
-                            </use>
-                        </svg>
+                        <?= $this->getLayout()
+                            ->createBlock('MageSuite\ThemeHelpers\Block\Icon')
+                            ->setIconUrl($block->getVar('brand_carousel/navigation/arrows/prev/path'))
+                            ->setCssClass('cs-brand-carousel__nav-icon')
+                            ->setInlined(true)
+                            ->toHtml(); 
+                        ?>    
                     </button>
                     <button
                         class="cs-brand-carousel__nav cs-brand-carousel__nav--next <?= $block->getVar('brand_carousel/navigation/arrows/next/additional_css_classes') ?>"
                         type="button">
-                        <svg class="cs-brand-carousel__nav-icon">
-                            <use
-                                xlink:href="<?= $navIconNextPath ?>"
-                                href="<?= $navIconNextPath ?>">
-                            </use>
-                        </svg>
+                        <?= $this->getLayout()
+                            ->createBlock('MageSuite\ThemeHelpers\Block\Icon')
+                            ->setIconUrl($block->getVar('brand_carousel/navigation/arrows/next/path'))
+                            ->setCssClass('cs-brand-carousel__nav-icon')
+                            ->setInlined(true)
+                            ->toHtml(); 
+                        ?>  
                     </button>
                 <?php endif; ?>
 
