--- a/view/frontend/templates/component/cms_teaser.phtml
+++ b/view/frontend/templates/component/cms_teaser.phtml
@@ -114,11 +114,16 @@ foreach ($slides as $slide) {
 
                                                 <?php if ($slide->getHref() and $slide->getData('ctaLabel')): ?>
                                                     <div class="cs-image-teaser__cta">
-                                                        <span role="button" class="cs-button cs-button--type_long cs-button--look_default">
-                                                            <span class="cs-button__span"><?= $slide->getData('ctaLabel') ?></span>
-                                                            <svg class="cs-button__icon">
-                                                                <use xlink:href="<?php echo $block->getVar('cms_teaser/cta_button_icon_path'); ?>"></use>
-                                                            </svg>
+                                                        <span role="button" class="cs-image-teaser__cta-button">
+                                                            <span class="cs-image-teaser__cta-button-span"><?= $slide->getData('ctaLabel') ?></span>
+                                                            <?= $this->getLayout()
+                                                                ->createBlock('MageSuite\ThemeHelpers\Block\Icon')
+                                                                ->setIconUrl($block->getVar('cms_teaser/cta_button_icon_path'))
+                                                                ->setCssClass('cs-image-teaser__cta-button-icon')
+                                                                ->setInlined(true)
+                                                                ->setLazyLoaded(false)
+                                                                ->toHtml(); 
+                                                        ?>
                                                         </span>
                                                     </div>
                                                 <?php endif; ?>
@@ -135,15 +140,25 @@ foreach ($slides as $slide) {
                     <?php if ($block->getVar('cms_teaser/show_navigation') && ($isSlider or $isSliderMobile)): ?>
                         <button class="cs-image-teaser__nav cs-image-teaser__nav--prev <?= $block->getVar('cms_teaser/navigation/arrows/prev/additional_css_classes') ?>"
                                 type="button">
-                            <svg class="cs-image-teaser__nav-icon">
-                                <use xlink:href="<?php echo $block->getVar('cms_teaser/navigation/arrows/prev/path'); ?>"></use>
-                            </svg>
+                            <?= $this->getLayout()
+                                ->createBlock('MageSuite\ThemeHelpers\Block\Icon')
+                                ->setIconUrl($block->getVar('cms_teaser/navigation/arrows/prev/path'))
+                                ->setCssClass('cs-image-teaser__nav-icon')
+                                ->setInlined(true)
+                                ->setLazyLoaded(false)
+                                ->toHtml(); 
+                            ?>
                         </button>
                         <button class="cs-image-teaser__nav cs-image-teaser__nav--next <?= $block->getVar('cms_teaser/navigation/arrows/next/additional_css_classes') ?>"
                                 type="button">
-                            <svg class="cs-image-teaser__nav-icon">
-                                <use xlink:href="<?php echo $block->getVar('cms_teaser/navigation/arrows/next/path'); ?>"></use>
-                            </svg>
+                            <?= $this->getLayout()
+                                ->createBlock('MageSuite\ThemeHelpers\Block\Icon')
+                                ->setIconUrl($block->getVar('cms_teaser/navigation/arrows/next/path'))
+                                ->setCssClass('cs-image-teaser__nav-icon')
+                                ->setInlined(true)
+                                ->setLazyLoaded(false)
+                                ->toHtml(); 
+                            ?>
                         </button>
                     <?php endif; ?>
 
